fix(AttentionBox): allow ellipsis for attention box that has overflow text

--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -73,8 +73,7 @@
 
 .text {
   &.compact {
-    display: flex;
-    align-items: center;
+    flex: 1;
 
     &.dismissible {
       padding-right: var(--spacing-xl);
